<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notification_item"
        android:icon="@drawable/ic_notification_toolbar"
        android:title="@string/notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/cart_item"
        android:icon="@drawable/ic_shopping_toolbar"
        android:title="@string/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorite_item"
        android:icon="@drawable/ic_heart_toolbar"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search_toolbar"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item"
        android:icon="@drawable/ic_menu_toolbar"
        android:title="@string/menu"
        app:showAsAction="always" />
</menu>